[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/unpauseCountdown.gd" type="Script" id=1]

[node name="unpauseCountdown" type="Control"]
pause_mode = 2
margin_right = 35.0
margin_bottom = 38.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.247059, 0.101961, 0.329412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="countdownTimer" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.56808
margin_top = 5.88628
margin_right = -617.432
margin_bottom = -340.114
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.882353, 0.701961, 0.270588, 1 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerObj" type="Timer" parent="."]

[connection signal="timeout" from="TimerObj" to="." method="_on_TimerObj_timeout"]
